--- a/register/index.html
+++ b/register/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
-    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="/microbloglite-capstone-starter/styles/global.css">
 
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="./landing.css">
