--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
-    <link rel="stylesheet" href="/microbloglite-capstone-starter/styles/global.css">
+    <link rel="stylesheet" href="global.css">
 
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="./landing.css">
@@ -59,7 +59,7 @@
                                     <button type="button" data-mdb-button-init data-mdb-ripple-init
                                         class="btn btn-primary btn-block btn-med gradient-custom-4 text-body"
                                         id="loginButton">Log In</button>
-                                    <p> <a href="registration.html">New user? Register here.</a> </p>
+                                    <p> <a href="register/registration.html">New user? Register here.</a> </p>
                                 </div>
 
                             </div>
