--- a/register/registration.html
+++ b/register/registration.html
@@ -24,7 +24,7 @@
             crossorigin="anonymous"></script>
 
         <!-- Global CSS (CSS rules you want applied to all pages) -->
-        <link rel="stylesheet" href="/microbloglite-capstone-starter/styles/global.css">
+        <link rel="stylesheet" href="/global.css">
     </head>
 
 <body>
