--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
     <link rel="stylesheet" href="global.css">
-
-    <!-- Page-specific CSS -->
     <link rel="stylesheet" href="./landing.css">
-
-    <title>Login|SnapTic!</title>
+    
+    <link rel="icon" href="images/blacksnaptic (1).png" type="image/x-icon" />
+    <title>Login | Snapic</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
     <script src="./auth.js"></script>
@@ -35,15 +34,15 @@
         <form id="login">
 
             <div class="d-flex align-items-center h-100 gradient-custom-3 mt-5 container">
-                <div><img src="images/snapik2 (2).png" alt="logo" class="d-flex justify-content-start"
-                        style="margin-right: -25px; margin-left: 30%; max-width:110% "></div>
+                <div><a href="index.html"><img src="images/snapik2 (2).png" alt="logo" class="d-flex justify-content-start"
+                        style="margin-right: -25px; margin-left: 30%; max-width:110% "></a></div>
                 <div class="container h-100">
                     <div class=" d-flex justify-content-end align-items-center h-100 ">
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                             <div class="card" style="border-radius: 5px; margin-top: 10%; margin-left: -50px;">
                                 <div class="card-body p-3">
-                                    <h1><b>Haptics in a snap.</b> </h1>
-                                    <p>Connect with peers through photography. Haptics in the virtual world on SnapTic.</p>
+                                    <h1><b>Snap your scene.</b> </h1>
+                                    <p>Connect with peers through photography. Share your vision in the virtual world on Snapic.</p>
                                     <h2 class="mb-3"><b>Catch up.</b></h2>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
@@ -68,14 +67,14 @@
     </main>
 
 
-    <footer class="py-3 my-4">
+    <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="footpages/features.html" class="nav-link px-2">Features</a></li>
             <li class="nav-item"><a href="footpages/membership.html" class="nav-link px-2 ">Memberships</a></li>
             <li class="nav-item"><a href="footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
             <li class="nav-item"><a href="footpages/about.html" class="nav-link px-2">About</a></li>
         </ul>
-        <p class="text-center text-white">© 2021 SnapTic, Inc.</p>
+        <p class="text-center text-white">© 2021 Snapic, Inc.</p>
     </footer>
 
 
