--- a/register/registration.html
+++ b/register/registration.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/snapik.png" type="image/x-icon" />
-    <title>Register|Snaptic</title>
+    <link rel="icon" href="/images/blacksnaptic (1).png" type="image/x-icon" />
+    <title>Register | Snapic</title>
 
-    <!-- POSTS page -->
+   
     <!DOCTYPE html>
     <html lang="en">
 
@@ -25,95 +25,103 @@
 
         <!-- Global CSS (CSS rules you want applied to all pages) -->
         <link rel="stylesheet" href="/global.css">
+        <link rel="stylesheet" href="./registration.css">
+
     </head>
 
 <body>
+    <div style="size: 20%;" class=""></div>
     <section class="vh-100">
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-        <div class="container 20px h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                    <div class="card" style="border-radius: 10px;">
-                        <div class="card-body p-5">
-                            <h2 class="text-uppercase text-center mb-3">Create an Account</h2>
+        <div></div>
+        <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+            <div class="container 20px h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                        <div class="card" style="border-radius: 10px;">
+                            <div class="card-body p-5">
+                                <div class="d-flex justify-content-center"> <a href="../index.html"> <img
+                                            src="/images/blacksnaptic (1).png"
+                                            style="height: 60px; margin-bottom: -5px;"></a></div><br>
+                                <h2 class="text-uppercase text-center mb-3">Create an Account</h2>
 
-                            <form id="registrationForm">
-                                <div data-mdb-input-init class="form-outline mb-2">
-                                    <label for="fullName">Full Name</label>
-                                    <input type="text" name="fullName" id="fullName" minlength="3" value=""
-                                        class="form-control" required>
-                                </div>
+                                <form id="registrationForm">
+                                    <div data-mdb-input-init class="form-outline mb-2">
+                                        <label for="fullName">Full Name</label>
+                                        <input type="text" name="fullName" id="fullName" minlength="3" value=""
+                                            class="form-control" required>
+                                    </div>
 
-                                <div data-mdb-input-init class="form-outline mb-2">
-                                    <label for="dateOfBirth">Date of Birth:</label>
-                                    <input type="date" id="birthdate" required="required" name="birthdate"
-                                        min="1980/01/01" style="margin-right: 3%">
+                                    <div data-mdb-input-init class="form-outline mb-2">
+                                        <label for="dateOfBirth">Date of Birth:</label>
+                                        <input type="date" id="birthdate" required="required" name="birthdate"
+                                            min="1980/01/01" style="margin-right: 3%">
 
-                                    Gender: <input type="radio" name="sex"><label> Male </label> <input
-                                        type="radio" name="sex"><label>
-                                        Female </label> <input type="radio" name="sex"><label> Non-Binary
-                                    </label>
+                                        Gender: <input type="radio" name="sex"><label> Male </label> <input type="radio"
+                                            name="sex"><label>
+                                            Female </label> <input type="radio" name="sex"><label> Non-Binary
+                                        </label>
 
-                                </div>
+                                    </div>
 
-                                <div data-mdb-input-init class="form-outline mb-3">
-                                    <label for="username">Username</label>
-                                    <input type="text" name="username" id="username" minlength="3" value=""
-                                        class="form-control" required>
-                                </div>
-                               
-                                <div data-mdb-input-init class="form-outline mb-4">
-                                    <label class="form-label" for="email" name="email">Email</label>
-                                    <input type="text" id="email" class="form-control" minlength="3" value="" required>
-                                </div>
+                                    <div data-mdb-input-init class="form-outline mb-3">
+                                        <label for="username">Username</label>
+                                        <input type="text" name="username" id="username" minlength="3" value=""
+                                            class="form-control" required>
+                                    </div>
 
-                                <div data-mdb-input-init class="form-outline mb-3">
-                                    <label for="password">Password</label>
-                                    <input type="password" name="password" id="password" minlength="6" value=""
-                                        class="form-control" required>
-                                </div>
+                                    <div data-mdb-input-init class="form-outline mb-4">
+                                        <label class="form-label" for="email" name="email">Email</label>
+                                        <input type="text" id="email" class="form-control" minlength="3" value=""
+                                            required>
+                                    </div>
 
-                                <br>
-                                        By registering, you agree to the <a href="#!">Terms of Service</a> and <a
-                                            href="#!">Privacy Policy</a>, including <a href="#!">Cookie Use</a>.
-                                        <br>
+                                    <div data-mdb-input-init class="form-outline mb-3">
+                                        <label for="password">Password</label>
+                                        <input type="password" name="password" id="password" minlength="6" value=""
+                                            class="form-control" required>
+                                    </div>
+
+                                    <br>
+                                    By registering, you agree to the <a href="#!">Terms of Service</a> and <a
+                                        href="#!">Privacy Policy</a>, including <a href="#!">Cookie Use</a>.
+                                    <br>
+                            </div>
+
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" id="registerButton"
+                                    class="btn btn-primary btn-block btn-med gradient-custom-4 text-body">Register
+                                    Now</button>
+                            </div>
+
+                            <p class="text-center text-muted mt-3 mb-0">Already have an account?
+                                <a href="/index.html"><u>Login here</u></a>
+                            </p>
+
+
+                            </form>
                         </div>
-
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" id="registerButton"
-                                class="btn btn-primary btn-block btn-med gradient-custom-4 text-body">Register
-                                Now</button>
-                        </div>
-
-                        <p class="text-center text-muted mt-3 mb-0">Already have an account?
-                            <a href="index.html"><u>Login here</u></a>
-                        </p>
-
-
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    </div>
-    </div>
-    </div>
-</section>
-    <footer class="py-3 my-4">
+        </div>
+        </div>
+        </div>
+    </section>
+    <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="footpages/features.html" class="nav-link px-2">Features</a></li>
-            <li class="nav-item"><a href="footpages/membership.html" class="nav-link px-2 ">Memberships</a></li>
-            <li class="nav-item"><a href="footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
-            <li class="nav-item"><a href="footpages/about.html" class="nav-link px-2">About</a></li>
+            <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2">Features</a></li>
+            <li class="nav-item"><a href="../footpages/membership.html" class="nav-link px-2 ">Memberships</a></li>
+            <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
+            <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2">About</a></li>
         </ul>
-        <p class="text-center text-white">© 2021 Snaptic, Inc.</p>
+        <p class="text-center text-white">© 2021 Snapic, Inc.</p>
     </footer>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="register/registration.js"></script>
+    <script src="./registration.js"></script>
 </body>
 
 </html>
