--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Global CSS (CSS rules you want applied to all pages) -->
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="./landing.css">
-    
+
     <link rel="icon" href="images/blacksnaptic (1).png" type="image/x-icon" />
     <title>Login | Snapic</title>
 
@@ -34,15 +34,17 @@
         <form id="login">
 
             <div class="d-flex align-items-center h-100 gradient-custom-3 mt-5 container">
-                <div><a href="index.html"><img src="images/snapik2 (2).png" alt="logo" class="d-flex justify-content-start"
-                        style="margin-right: -25px; margin-left: 30%; max-width:110% "></a></div>
+                <div><a href="index.html"><img src="images/snapik2 (2).png" alt="logo"
+                            class="d-flex justify-content-start"
+                            style="margin-right: -25px; margin-left: 30%; max-width:110% "></a></div>
                 <div class="container h-100">
                     <div class=" d-flex justify-content-end align-items-center h-100 ">
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                             <div class="card" style="border-radius: 5px; margin-top: 10%; margin-left: -50px;">
                                 <div class="card-body p-3">
                                     <h1><b>Snap your scene.</b> </h1>
-                                    <p>Connect with peers through photography. Share your vision in the virtual world on Snapic.</p>
+                                    <p>Connect with peers through photography. Share your vision in the virtual world on
+                                        Snapic.</p>
                                     <h2 class="mb-3"><b>Catch up.</b></h2>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
@@ -50,8 +52,7 @@
                                         <label class="form-label" for="username" required>Username</label>
                                     </div>
 
-
-                                    <div data-mdb-input-init class="form-outline mb-4">
+                                   <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="text" id="loginform" class="form-control form-control-lg" />
                                         <label class="form-label" for="password" minlength="8" required>Password</label>
                                     </div <div class="d-flex justify-content-center">
@@ -64,7 +65,6 @@
                             </div>
         </form>
 
-    </main>
 
 
     <footer class="py-3 my-4" id="footer">
@@ -77,7 +77,7 @@
         <p class="text-center text-white">© 2021 Snapic, Inc.</p>
     </footer>
 
-
+</main>
     <!-- Page-specific code -->
     <script src="./landing.js"></script>
 </body>
