--- a/register/registration.html
+++ b/register/registration.html
@@ -30,6 +30,7 @@
     </head>
 
 <body>
+<main>
     <div style="size: 20%;" class=""></div>
     <section class="vh-100">
         <div></div>
@@ -108,6 +109,7 @@
         </div>
         </div>
     </section>
+
     <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2">Features</a></li>
@@ -117,11 +119,13 @@
         </ul>
         <p class="text-center text-white">© 2021 Snapic, Inc.</p>
     </footer>
+</main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="./registration.js"></script>
+
 </body>
 
 </html>
