--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./landing.css">
 
     <link rel="icon" href="images/blacksnaptic (1).png" type="image/x-icon" />
-    <title>Login | Snapic</title>
+    <title>Login | PostSense</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
     <script src="./auth.js"></script>
@@ -28,10 +28,11 @@
 </head>
 
 <body>
-
+   
     <main>
+       
 
-        <form id="login">
+        <form id="loginForm">
 
             <div class="d-flex align-items-center h-100 gradient-custom-3 mt-5 container">
                 <div><a href="index.html"><img src="images/snapik2 (2).png" alt="logo"
@@ -42,21 +43,21 @@
                         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
                             <div class="card" style="border-radius: 5px; margin-top: 10%; margin-left: -50px;">
                                 <div class="card-body p-3">
-                                    <h1><b>Snap your scene.</b> </h1>
-                                    <p>Connect with peers through photography. Share your vision in the virtual world on
-                                        Snapic.</p>
+                                    <h1><b>Connection that makes sense.</b> </h1>
+                                    <p>Chat with peers across the world. Share what makes sense on
+                                        PostSense.</p>
                                     <h2 class="mb-3"><b>Catch up.</b></h2>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
-                                        <input type="text" id="loginform" class="form-control form-control-lg" />
-                                        <label class="form-label" for="username" required>Username</label>
+                                        <input type="text" id="username" value="" class="form-control form-control-lg" />
+                                        <label class="form-label" for="username"  required>Username</label>
                                     </div>
 
                                    <div data-mdb-input-init class="form-outline mb-4">
-                                        <input type="text" id="loginform" class="form-control form-control-lg" />
+                                        <input type="password" id="password" class="form-control form-control-lg" />
                                         <label class="form-label" for="password" minlength="8" required>Password</label>
                                     </div <div class="d-flex justify-content-center">
-                                    <button type="button" data-mdb-button-init data-mdb-ripple-init
+                                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
                                         class="btn btn-primary btn-block btn-med gradient-custom-4 text-body"
                                         id="loginButton">Log In</button>
                                     <p> <a href="register/registration.html">New user? Register here.</a> </p>
@@ -65,7 +66,7 @@
                             </div>
         </form>
 
-
+    </main>
 
     <footer class="py-3 my-4" id="footer">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
@@ -74,12 +75,13 @@
             <li class="nav-item"><a href="footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
             <li class="nav-item"><a href="footpages/about.html" class="nav-link px-2">About</a></li>
         </ul>
-        <p class="text-center text-white">© 2021 Snapic, Inc.</p>
+        <p class="text-center text-white">© 2021 PostSense, Inc.</p>
     </footer>
 
-</main>
+
     <!-- Page-specific code -->
-    <script src="./landing.js"></script>
+    <script src="landing.js"></script>
+    <!-- <script src="auth.js"></script> -->
 </body>
 
 </html>
