--- a/postspage/index.html
+++ b/postspage/index.html
@@ -15,15 +15,21 @@
         crossorigin="anonymous"></script>
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
-    <link rel="stylesheet" href="/global.css">
+    <link rel="stylesheet" href="../global.css">
     <link rel="stylesheet" href="./post.css">
     <link rel="icon" href="../images/blacksnaptic (1).png" type="image/x-icon" />
-    <title> News Feed | Snapic</title>
+    <title> News Feed | PostSense</title>
+
+    <script src="../auth.js"></script>
+    <script>
+        if (isLoggedIn() === false) window.location.replace("/");
+    </script>
+
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light container">
-        <a class="navbar-brand" href="./index.html" style="margin-left: 2%;">Snapic</a>
+        <a class="navbar-brand" href="./index.html" style="margin-left: 2%;">PostSense</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +47,7 @@
             <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%;">Search</button>
         </form>
 
-        <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;">Log
+        <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;" id="logOutButton">Log
             Out</button>
 
 
@@ -50,16 +56,16 @@
     <main id="postPage">
         <div id="page-container" class="container 20px h-100">
             <div id="content-wrap">
-                <img src="../images/blacksnaptic (1).png" style="height: 70px;">Snapic<br><br>
+              <div class="d-flex justify-content-center"> <a href="./index.html"><img src="../images/blacksnaptic (1).png" style="height: 70px;"></a> </div><center>PostSense</center><br><br>
                 <h1> </h1>
 
-                <h4>Snap into what's happening.</h4>
+                <h4>See what's happening.</h4>
                 </header>
 
-                <main id="commentSection" class="card mb-3">
-                    <div id="commentContainer">
+                <main id="postSection" class="card mb-3" style="width: 50%;">
+                    <div id="postsContainer">
                         <div id="postContainer" class="card-body">
-                          
+                            
                         </div>
                     </div>
 
@@ -77,7 +83,7 @@
                         <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
                         <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2">About</a></li>
                     </ul>
-                    <p class="text-center text-white">© 2021 Snapic, Inc.</p>
+                    <p class="text-center text-white">© 2021 PostSense, Inc.</p>
                 </footer>
             </div>
         </div>
@@ -86,14 +92,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./profile.js"></script>
+            <script src="./post.js"></script>
 
-</body>
 
-</html>
-
-<!-- Page-specific code -->
-<script src="./post.js"></script>
 </body>
 
 </html>
