--- a/profile/profile.html
+++ b/profile/profile.html
@@ -23,7 +23,7 @@
 
     <script src="../auth.js"></script>
     <script>
-        if (isLoggedIn() === false) window.location.replace("/");
+        if (isLoggedIn() === false) window.location.replace("../index.html");
     </script>
 </head>
 </head>
