complete styling of landing page

--- a/postspage/index.html
+++ b/postspage/index.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="../profile/profile.html">Profile</a>
-                <a class="nav-item nav-link" href="#">Inbox</a>
+
 
             </div>
         </div>
@@ -47,7 +47,8 @@
             <button class="btn btn-sm my-2 my-sm-0" type="submit" style="margin-right: 10%;">Search</button>
         </form>
 
-        <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;" id="logOutButton">Log
+        <button class="btn btn-sm btn-outline-primary my-2 my-sm-0" type="submit" style="margin-right: 2%;"
+            id="logOutButton">Log
             Out</button>
 
 
@@ -56,30 +57,31 @@
     <main id="postPage">
         <div id="page-container" class="container 20px h-100">
             <div id="content-wrap">
-              <div class="d-flex justify-content-center"> <a href="./index.html"><img src="../images/blacksnaptic (1).png" style="height: 70px;"></a> </div><center>PostSense</center><br><br>
-                <h1> </h1>
+                <div class="d-flex justify-content-center"> <a href="./index.html"><img
+                            src="../images/blacksnaptic (1).png" style="height: 70px;"></a> </div>
+                <center>PostSense</center><br><br>
 
-                <h4>See what's happening.</h4>
+
+                <h4 style="margin-left: 10%;">See what's happening.</h4>
                 </header>
 
-                <main id="postSection" class="card mb-3" style="width: 50%;">
+                <div class="d-flex justify-content-center"><main id="postSection" class="card mb-3" style="width: 80%;">
                     <div id="postsContainer">
                         <div id="postContainer" class="card-body">
-                            
+
                         </div>
                     </div>
 
 
 
 
-                </main>
+                </main></div>
 
                 <footer class="py-3 my-4" id="footer">
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                         <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2">Features</a>
                         </li>
-                        <li class="nav-item"><a href="../footpages/membership.html"
-                                class="nav-link px-2 ">Memberships</a></li>
+                        
                         <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
                         <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2">About</a></li>
                     </ul>
@@ -92,7 +94,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-            <script src="./post.js"></script>
+        <script src="./post.js"></script>
 
 
 </body>
