--- a/register/registration.html
+++ b/register/registration.html
@@ -81,8 +81,7 @@
                                         </div>
 
                                         <br>
-                                        By registering, you agree to the <a href="#!">Terms of Service</a> and <a
-                                            href="#!">Privacy Policy</a>, including <a href="#!">Cookie Use</a>.
+                                        By registering, you agree to the <a href="../termsofservice.html">Terms of Service.</a>
                                         <br>
                                 </div>
 
@@ -112,7 +111,7 @@
         <footer class="py-3 my-4" id="footer">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2">Features</a></li>
-                <li class="nav-item"><a href="../footpages/membership.html" class="nav-link px-2 ">Memberships</a></li>
+            
                 <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
                 <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2">About</a></li>
             </ul>
