complete check for errors going live

--- a/postspage/index.html
+++ b/postspage/index.html
@@ -65,23 +65,27 @@
                 <h4 style="margin-left: 10%;">See what's happening.</h4>
                 </header>
 
-                <div class="d-flex justify-content-center"><main id="postSection" class="card mb-3" style="width: 80%;">
-                    <div id="postsContainer">
-                        <div id="postContainer" class="card-body">
+                <div class="d-flex justify-content-center">
+                    <main id="postSection" class="card mb-3" style="width: 80%; overflow-y:scroll;height: 500px
 
+                    ">
+                        <div id="postsContainer">
+                            <div id="postContainer" class="card-body">
+
+                            </div>
                         </div>
-                    </div>
 
 
 
 
-                </main></div>
+                    </main>
+                </div>
 
                 <footer class="py-3 my-4" id="footer">
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                         <li class="nav-item"><a href="../footpages/features.html" class="nav-link px-2">Features</a>
                         </li>
-                        
+
                         <li class="nav-item"><a href="../footpages/faq.html" class="nav-link px-2 ">FAQs</a></li>
                         <li class="nav-item"><a href="../footpages/about.html" class="nav-link px-2">About</a></li>
                     </ul>
