--- a/register/registration.html
+++ b/register/registration.html
@@ -81,7 +81,7 @@
                                         </div>
 
                                         <br>
-                                        By registering, you agree to the <a href="../termsofservice.html">Terms of Service.</a>
+                                        By registering, you agree to the <a href="../termsofservice.html">Terms of Service & Privacy Policy.</a>
                                         <br>
                                 </div>
 
