--- a/footpages/about.html
+++ b/footpages/about.html
@@ -62,7 +62,7 @@
         real-time discussions. Whether you're sharing thoughts, photos, videos, or links, PostSense
         empowers users to express themselves and connect with others in a concise and meaningful way. <br><br>
 
-        <b>b>Key Features:</b><br>
+        <b>Key Features:</b><br>
 
         <b>Microblogging: </b><br>Post short updates, thoughts, or observations in 280 characters or less. Express yourself
         succinctly and creatively.<br><br>
