--- a/postspage/index.html
+++ b/postspage/index.html
@@ -22,7 +22,7 @@
 
     <script src="../auth.js"></script>
     <script>
-        if (isLoggedIn() === false) window.location.replace("../index.html");
+        if (isLoggedIn() === false) window.location.replace("../index.htmk");
     </script>
 
 </head>
